--- a/src/app/input-field/input-field.component.html
+++ b/src/app/input-field/input-field.component.html
@@ -1,1 +1,4 @@
-<p>input-field works!</p>
+<form class="input-container">
+    <input type="text" [(ngModel)]="cityName" placeholder="Enter city name">
+    <button type="submit" >Add city</button>
+</form>
