--- a/src/app/input-field/input-field.component.html
+++ b/src/app/input-field/input-field.component.html
@@ -1,4 +1,4 @@
 <form class="input-container">
-    <input type="text" [(ngModel)]="cityName" placeholder="Enter city name">
-    <button type="submit" >Add city</button>
+    <input type="text" [value]="cityName" placeholder="Enter city name">
+    <button type="button" (click)="addCity()">Add city</button>
 </form>
