--- a/src/app/city-card/city-card.component.html
+++ b/src/app/city-card/city-card.component.html
@@ -1,6 +1,6 @@
-<div>
+<li class="city-card">
     <h2>{{ city.city }}</h2>
     <p>Temperature: {{ city.temperature }}°C</p>
     <p>Condition: {{ city.condition }}</p>
     <button (click)="onRemove()">Remove</button>
-</div>
+</li>
